--- a/pom.xml
+++ b/pom.xml
@@ -7,15 +7,17 @@
     <groupId>org.example</groupId>
     <artifactId>geek-spring</artifactId>
     <packaging>pom</packaging>
+
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>lesson01-servletApi</module>
+        <module>lesson02-spring-basics-chat</module>
     </modules>
 
     <properties>
         <maven.compiler.source>15</maven.compiler.source>
         <maven.compiler.target>15</maven.compiler.target>
+        <spring.version>5.3.3</spring.version>
     </properties>
-
 
 </project>
