lesson 2 Add my chat server from 1 level

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>lesson01-servletApi</module>
         <module>lesson02-spring-basics-chat</module>
+        <module>lesson3-springMVC</module>
     </modules>
 
     <properties>
