lesson4 add validation

--- a/lesson3-springMVC/pom.xml
+++ b/lesson3-springMVC/pom.xml
@@ -25,6 +25,7 @@
             <version>3.0.10.RELEASE</version>
         </dependency>
 
+<!--        logger-->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
@@ -37,6 +38,32 @@
             <version>3.1.0</version>
             <scope>provided</scope>
         </dependency>
+
+<!--        Для валидации необходимо использовать следующие завивисмости-->
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.0.2.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator-annotation-processor</artifactId>
+            <version>6.0.2.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.el</groupId>
+            <artifactId>javax.el-api</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish.web</groupId>
+            <artifactId>javax.el</artifactId>
+            <version>2.2.6</version>
+        </dependency>
+<!-- ...................................................................................... -->
 
         <dependency>
             <groupId>javax.annotation</groupId>
