--- a/lesson4-spring-boot/src/main/resources/application.properties
+++ b/lesson4-spring-boot/src/main/resources/application.properties
@@ -1,3 +1,17 @@
 server.servlet.context-path=/spring-mvc-app
 server.port=8080
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=root
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+
+
 spring.mvc.hiddenmethod.filter.enabled=true
+
