--- a/lesson4-spring-boot/src/main/resources/application.properties
+++ b/lesson4-spring-boot/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.mvc.hiddenmethod.filter.enabled=true
 
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui-custom.html
