--- a/lesson4-spring-boot/src/main/resources/application.properties
+++ b/lesson4-spring-boot/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.mvc.hiddenmethod.filter.enabled=true
 
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui-custom.html
+
+
+logging.level.org.springframework.security=DEBUG
